[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://ui/ConnectionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/MatchScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://UILayer.gd" type="Script" id=5]
[ext_resource path="res://ui/ReadyScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/TitleScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Game" parent="." instance=ExtResource( 3 )]

[node name="UILayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 5 )

[node name="TitleScreen" parent="UILayer" instance=ExtResource( 7 )]
visible = false

[node name="ConnectionScreen" parent="UILayer" instance=ExtResource( 2 )]
visible = false

[node name="MatchScreen" parent="UILayer" instance=ExtResource( 4 )]
visible = false

[node name="ReadyScreen" parent="UILayer" instance=ExtResource( 6 )]
visible = false

[node name="HUD" parent="." instance=ExtResource( 8 )]
pause_mode = 2
[connection signal="game_over" from="Game" to="." method="_on_Game_game_over"]
[connection signal="game_started" from="Game" to="." method="_on_Game_game_started"]
[connection signal="player_dead" from="Game" to="." method="_on_Game_player_dead"]
[connection signal="change_screen" from="UILayer" to="." method="_on_UILayer_change_screen"]
[connection signal="play_local" from="UILayer/TitleScreen" to="." method="_on_TitleScreen_play_local"]
[connection signal="play_online" from="UILayer/TitleScreen" to="." method="_on_TitleScreen_play_online"]
[connection signal="ready_pressed" from="UILayer/ReadyScreen" to="." method="_on_ReadyScreen_ready_pressed"]
[connection signal="back_button" from="HUD" to="." method="_on_HUD_back_button"]
